test/zinc_source/compile_errors/callables/23_arrow_lambda_bare_typed_param.zn
// expected-error: syntax error
fn main() {
    f = x: i32 -> x
}
